Resolve #67; Realign PM labels
Merge TO and BCC recipients markup

Align PM labels

--- a/styles/zerozaku/theme/buttons.css
+++ b/styles/zerozaku/theme/buttons.css
@@ -1,6 +1,8 @@
 /* ZeroZaku Button Styles
 ---------------------------------------- */
 .button1, .button2 { text-decoration: none; }
+.button1[value=x], .button2[value=x] { padding: 1px 4px !important; }
+
 /* Rollover buttons
    Based on: http://wellstyled.com/css-nopreload-rollovers.html
 ----------------------------------------*/
